src/rules/snapshots/darklua_core__rules__remove_comments__test__remove_comments_in_code.snap
---
source: src/rules/remove_comments.rs
expression: code_output
---
var , var2 
= true  
    , false

 i  -= 1
do 
end
function foo 
    . var 
    (param1 , p2 , ...  ) 
end
function foo:var 
    (param1 , p2 , ...  ) 
    return 0x01  - 0b1 
end

for key , value   in pairs( variable ) do continue end

if  "value" then
elseif  'value2'  then
else 

    return 

end

local  id
local id2 
    = .123, function( arg  , ... ) end

local a ,  b, c = id +  id, nil 
const  constId = 0
const  c1, c2 = fn()

local function fn  ( p1, p2 
    , p3, ... ) end

for i = 10, 1, - 3 do 
    continue 
end

repeat 
    break 
until  not  -value

while  true 
do
    return  result . new  ( value . field 
), object[  not key  ]
end

object : method  ({ key  = [[true]], [ true ] = ( nil ) 
 }, ...  )

object .  field : method 
{ if   value   then    ok   else   err, {  },  }

local string = `-{ true }-{ object  }={ c + 8 }` 




local var: string | number 

local bvar = var :: number

local function fn2<T , U, R...>(first: T & U, opts: { [number  ]: string }? , ...: R...) : ()
    return first ::  T
end

type MyT = {
    true 
}

export  type PublicMyT = (MyT)

type Opt<T> = Module . OtherType 

type Try = (...'a'  ) -> typeof ( fn()  )

type function identity_fn(t): () 
    return t
end

export    type function identity_fn   ( ... )
    return (...)
end

type   function   example_complex_type_function <  T , U, R...>(first: T & U, opts: { [number  ]: string }? , ...: R...) :  ()
    return first
end

format << Obj >> ()
format <   < Obj >   > ()
Formatter.format <   <  Obj , Item<Obj> >   > ()

local f = format <  < Obj >>.containerFormat["test-fn"] < < string >>
